Fix tooltip z-index. Closes #214.

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -21,6 +21,7 @@
   padding: 30px 30px 15px
   position: relative
   min-height: 368px
+  z-index: -10
 
   .no_sidebar &:after
     width: 908px
@@ -119,7 +120,7 @@
   width: 600px
   position: fixed
   top: 72px
-  z-index: 2
+  z-index: -5
 
 #reader_header:after
   background: image-url("shadow.png") repeat-x
